updateding the index.html for maaz draft

--- a/index.html
+++ b/index.html
@@ -445,15 +445,22 @@
 
 
 
-  <section id="projects">
+<!-- ========================================================= -->
+<!-- ===================== PROJECTS SECTION =================== -->
+<!-- ========================================================= -->
+
+<section id="projects">
   <p class="section__text__p1">Browse My Recent</p>
   <h1 class="title">Projects</h1>
 
   <div class="project-wrapper">
 
-    <!-- PROJECT 1 -->
+    <!-- ========================================================= -->
+    <!-- ======================== PROJECT 1 ======================== -->
+    <!-- ========================================================= -->
     <div class="project-box">
       <div class="project-left">
+        <!-- Project image -->
         <img src="./assets/project1.jpg" class="project-thumb" alt="CRADMap Project">
       </div>
 
@@ -468,6 +475,7 @@
           under occlusions and degraded visibility.
         </p>
 
+        <!-- Buttons (Video + GitHub + Publication) -->
         <div class="project-btn-row">
           <button class="btn btn-color-2 project-btn" onclick="location.href='https://www.youtube.com/watch?v=eTLxCY2rRMA'">Video</button>
           <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Maaz-qureshi98/CRADMap-Beyond-the-Visible'">GitHub</button>
@@ -478,7 +486,9 @@
 
     <hr>
 
-    <!-- PROJECT 2 -->
+    <!-- ========================================================= -->
+    <!-- ======================== PROJECT 2 ======================== -->
+    <!-- ========================================================= -->
     <div class="project-box">
       <div class="project-left">
         <img src="./assets/project2.jpg" class="project-thumb" alt="RAPTAR Project">
@@ -505,10 +515,12 @@
 
     <hr>
 
-    <!-- PROJECT 3 -->
+    <!-- ========================================================= -->
+    <!-- ======================== PROJECT 3 ======================== -->
+    <!-- ========================================================= -->
     <div class="project-box">
       <div class="project-left">
-        <img src="./assets/project3.jpg" class="project-thumb" alt="Humanoid HRI Project">
+        <img src="./assets/project3.jpg" class="project-thumb" alt="Humanoid Robotics Project">
       </div>
 
       <div class="project-right">
@@ -516,7 +528,7 @@
 
         <p class="project-desc">
           Integrated LLaMA-3 with real-time gesture and vision sensing for NAO robot control,
-          enabling non-verbal HRI using IMU-based motion interpretation and multimodal decision frameworks.
+          enabling non-verbal HRI via IMU-based motion interpretation and a multimodal decision pipeline.
         </p>
 
         <div class="project-btn-row">
@@ -527,10 +539,12 @@
 
     <hr>
 
-    <!-- PROJECT 4 -->
+    <!-- ========================================================= -->
+    <!-- ======================== PROJECT 4 ======================== -->
+    <!-- ========================================================= -->
     <div class="project-box">
       <div class="project-left">
-        <img src="./assets/project4.png" class="project-thumb" alt="Swarm Autobots">
+        <img src="./assets/project4.jpg" class="project-thumb" alt="Swarm Autobots">
       </div>
 
       <div class="project-right">
@@ -539,8 +553,8 @@
         </p>
 
         <p class="project-desc">
-          Designed a synchronization framework for multi-robot UGV teams enabling robust formation control,
-          peer-to-peer communication, and real-time trajectory coordination in constrained indoor environments.
+          Designed a synchronization and formation-control framework for multi-robot UGV teams enabling
+          coordinated planning, wireless peer-to-peer communication, and real-time trajectory execution.
         </p>
 
         <div class="project-btn-row">
@@ -551,10 +565,12 @@
 
     <hr>
 
-    <!-- PROJECT 5 -->
+    <!-- ========================================================= -->
+    <!-- ======================== PROJECT 5 ======================== -->
+    <!-- ========================================================= -->
     <div class="project-box">
       <div class="project-left">
-        <img src="./assets/project5.jpg" class="project-thumb" alt="Underwater DAM Inspection">
+        <img src="./assets/project5.jpg" class="project-thumb" alt="DAM Inspection ROV/AUV">
       </div>
 
       <div class="project-right">
@@ -564,8 +580,8 @@
         </p>
 
         <p class="project-desc">
-          Conducted 18 km offshore structural inspection of NJHEP dam using multi-beam sonar,
-          profiling sonar, and monochrome vision — the largest underwater inspection project in South Asia.
+          Completed an 18 km underwater inspection of NJHEP dam using multi-beam sonar and profiling sonar.
+          Produced a digital-twin reconstruction — the largest inspection operation in South Asia.
         </p>
 
         <div class="project-btn-row">
@@ -576,18 +592,20 @@
 
     <hr>
 
-    <!-- PROJECT 6 -->
+    <!-- ========================================================= -->
+    <!-- ======================== PROJECT 6 ======================== -->
+    <!-- ========================================================= -->
     <div class="project-box">
       <div class="project-left">
-        <img src="./assets/project6.jpg" class="project-thumb" alt="Canal ROV Sonar Inspection">
+        <img src="./assets/project6.jpg" class="project-thumb" alt="Canal Sonar ROV Inspection">
       </div>
 
       <div class="project-right">
         <p class="project-title">Canal Crack-Propagation Inspection Using ROV + Sonar</p>
 
         <p class="project-desc">
-          Integrated Oculus 750d sonar into a custom ROV for underwater crack diagnosis at 9 m depth,
-          analyzing bed erosion and propagation under 2.3 m/s water flow.
+          Integrated Oculus 750d sonar into a custom ROV for crack-propagation detection at 9 m depth,
+          performing underwater analysis under 2.3 m/s turbulent flow.
         </p>
 
         <div class="project-btn-row">
@@ -598,18 +616,20 @@
 
     <hr>
 
-    <!-- PROJECT 7 -->
+    <!-- ========================================================= -->
+    <!-- ======================== PROJECT 7 ======================== -->
+    <!-- ========================================================= -->
     <div class="project-box">
       <div class="project-left">
-        <img src="./assets/project7.jpg" class="project-thumb" alt="Pill Dispensing Robot">
+        <img src="./assets/project7.jpg" class="project-thumb" alt="Healthcare Robot">
       </div>
 
       <div class="project-right">
         <p class="project-title">Autonomous Pill-Dispensing Healthcare Robot (COVID-19)</p>
 
         <p class="project-desc">
-          Built a deep-learning based facial recognition + RFID navigation robot capable of precise
-          multi-pill dispensing and autonomous path following for safe patient-care during COVID-19.
+          Designed a facial-recognition + RFID navigation autonomous robot capable of multi-pill dispensing
+          for safe, contactless patient-care workflows during COVID-19.
         </p>
 
         <div class="project-btn-row">
