updateding the index.html for maaz draft

--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
         </div>
       </div>
     </section>
-    <section id="about">
+  
+  
+  
+  
+  <!-- <section id="about"> 
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
@@ -140,6 +144,52 @@
           </div>
         </div>
       </div>
+
+      --> 
+      <!-- ========================= EDUCATION DETAILS ========================= -->
+
+<div class="education-wrapper">
+
+  <!-- UNIVERSITY 1 -->
+  <div class="edu-box">
+    <div class="edu-left">
+      <img src="./assets/uwaterloo.png" class="edu-logo" alt="University of Waterloo Logo" />
+    </div>
+
+    <div class="edu-right">
+      <h2 class="edu-title">University of Waterloo, Canada</h2>
+      <p class="edu-degree">Masters of Applied Sciences (MASc), Mechatronics Engineering</p>
+      <p class="edu-detail"><strong>Thesis:</strong> Connected Robotics — Multi-Robot Autonomy, SLAM, Radar Fusion & 5G</p>
+      <p class="edu-detail"><strong>CGPA:</strong> 93.5%</p>
+      <p class="edu-duration">Jan 2024 – Jun 2025</p>
+    </div>
+  </div>
+
+  <hr class="edu-divider">
+
+  <!-- UNIVERSITY 2 -->
+  <div class="edu-box">
+    <div class="edu-left">
+      <img src="./assets/bahria.png" class="edu-logo" alt="Bahria University Logo" />
+    </div>
+
+    <div class="edu-right">
+      <h2 class="edu-title">Bahria University, Pakistan</h2>
+      <p class="edu-degree">Bachelors of Applied Sciences (BASc), Electrical Engineering</p>
+      <p class="edu-detail"><strong>Thesis:</strong> Swarm Robotics — Multi-Robot Path Planning</p>
+      <p class="edu-detail"><strong>CGPA:</strong> 3.49 / 4.00</p>
+      <p class="edu-duration">Sept 2017 – Aug 2021</p>
+    </div>
+  </div>
+
+</div>
+
+      
+
+
+
+
+
       <img
         src="./assets/arrow.png"
         alt="Arrow icon"
