--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <!-- UNIVERSITY 1 -->
   <div class="edu-box">
     <div class="edu-left">
-      <img src="./assets/uwaterloo.png" class="edu-logo" alt="University of Waterloo Logo" />
+      <img src="./assets/uwaterloo.jpeg" class="edu-logo" alt="University of Waterloo Logo" />
     </div>
 
     <div class="edu-right">
@@ -170,7 +170,7 @@
   <!-- UNIVERSITY 2 -->
   <div class="edu-box">
     <div class="edu-left">
-      <img src="./assets/bahria.png" class="edu-logo" alt="Bahria University Logo" />
+      <img src="./assets/bahria_university.jpeg" class="edu-logo" alt="Bahria University Logo" />
     </div>
 
     <div class="edu-right">
