pushing the updated changes

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   
   
   
-  <!-- <section id="about"> 
+   <section id="about"> 
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
@@ -145,12 +145,15 @@
         </div>
       </div>
 
-      --> 
+      
       <!-- ========================= EDUCATION DETAILS ========================= -->
+
+<!-- ========================= ACADEMIC BACKGROUND ========================= -->
+<h2 class="academic-heading">Academic Background</h2>
 
 <div class="education-wrapper">
 
-  <!-- UNIVERSITY 1 -->
+  <!-- ========================= UNIVERSITY OF WATERLOO ========================= -->
   <div class="edu-box">
     <div class="edu-left">
       <img src="./assets/uwaterloo.jpeg" class="edu-logo" alt="University of Waterloo Logo" />
@@ -159,30 +162,50 @@
     <div class="edu-right">
       <h2 class="edu-title">University of Waterloo, Canada</h2>
       <p class="edu-degree">Masters of Applied Sciences (MASc), Mechatronics Engineering</p>
-      <p class="edu-detail"><strong>Thesis:</strong> Connected Robotics — Multi-Robot Autonomy, SLAM, Radar Fusion & 5G</p>
-      <p class="edu-detail"><strong>CGPA:</strong> 93.5%</p>
-      <p class="edu-duration">Jan 2024 – Jun 2025</p>
+
+      <p class="edu-detail">
+        <strong>Thesis:</strong> Intelligent Multi-Robot Autonomy with Connected AMRs and Manipulators for SMART Factory(s)
+      </p>
+      <p class="edu-detail"><strong>CGPA:</strong> 93.5% (A+)</p>
+      <p class="edu-duration">Jan 2024 – August 2025</p>
+
+      <!-- Academic Links -->
+      <div class="edu-btn-row">
+        <a href="https://uwspace.uwaterloo.ca/items/17af2309-7924-47ad-802d-10f313d2a378" target="_blank" class="edu-btn">Thesis</a>
+        <a href="https://www.youtube.com/watch?v=eTLxCY2rRMA" target="_blank" class="edu-btn">Video 1: Autonomy</a>
+        <a href="https://www.youtube.com/watch?v=fgeb6k_P9mg" target="_blank" class="edu-btn">Video 2: Motion Planning</a>
+      </div>
     </div>
   </div>
 
   <hr class="edu-divider">
 
-  <!-- UNIVERSITY 2 -->
+  <!-- ========================= BAHRIA UNIVERSITY ========================= -->
   <div class="edu-box">
     <div class="edu-left">
       <img src="./assets/bahria_university.jpeg" class="edu-logo" alt="Bahria University Logo" />
     </div>
 
     <div class="edu-right">
-      <h2 class="edu-title">Bahria University, Pakistan</h2>
+      <h2 class="edu-title">Bahria University</h2>
       <p class="edu-degree">Bachelors of Applied Sciences (BASc), Electrical Engineering</p>
-      <p class="edu-detail"><strong>Thesis:</strong> Swarm Robotics — Multi-Robot Path Planning</p>
-      <p class="edu-detail"><strong>CGPA:</strong> 3.49 / 4.00</p>
-      <p class="edu-duration">Sept 2017 – Aug 2021</p>
+
+      <p class="edu-detail">
+        <strong>Thesis:</strong> Swarm Robotics — Multi-Robot Path Planning
+      </p>
+      <p class="edu-detail"><strong>CGPA:</strong> 80.0% (A+)</p>
+      <p class="edu-duration">September 2017 – August 2021</p>
+
+      <!-- Academic Links -->
+      <div class="edu-btn-row">
+        <a href="BSC_THESIS_LINK_HERE" target="_blank" class="edu-btn">Thesis</a>
+        <a href="https://www.youtube.com/watch?v=2UYPGOTPboM&feature=youtu.be" target="_blank" class="edu-btn">Video</a>
+      </div>
     </div>
   </div>
 
 </div>
+
 
       
 
