pushing the updated changes

--- a/index.html
+++ b/index.html
@@ -45,28 +45,15 @@
     
         <p class="section__text__p1">Hi, this is</p>
 <h1 class="title">Maaz Qureshi</h1>
-<p class="section__text__p2">Robotics & AI Research Software Engineer</p>
+<p class="section__text__p2">AI/ML & Robotics Research Engineer</p>
 
 
 <p class="hero-desc">
-  I am a mechatronics engineer with a passion for building intelligent robots to work better. 
-  My research work spans multi-robot SLAM autonomy, manipulator motion planning, mmWave 4D radar & RGB-D sensor fusion, 
-  distributed 5G-connected robotics, and computational intelligence.
+  Maaz is mechatronics engineer M.A.Sc with a passion for building intelligent robots to work better. 
+  My research work spans software development of multi-robot SLAM autonomy, manipulator motion planning, mmWave 4D radar & RGB-D sensor fusion, 
+  distributed 5G-connected robotics, and computational intelligence: reinforcenment learning (RL/IL).
 </p>
 
-<p class="hero-desc">
-  During my M.A.Sc (applied research) studies, I spent time at the University of Waterloo 
-  (with <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/profile/wmelek" target="_blank">Dr. William Melek</a> 
-  and <a href="https://uwaterloo.ca/electrical-computer-engineering/profile/gshaker" target="_blank">Dr. George Shaker</a>),  
-  Apple Inc., UW Robohub, Keysight Technologies Inc., and Rogers Communications Canada Inc., 
-  where I worked on connected robotics technology.
-</p>
-
-<p class="hero-desc">
-  Earlier in my life, I developed a passion for swarm robotics, which led to winning 3rd place  
-  in Best Engineering Science Final Year Project during my B.Sc. Later, I was selected to supervise  
-  a NUST University Islamabad team for the Aerotech IMECHE United Kingdom 2022 competition,  
-  developing a hexacopter for a locust-swarm autonomy mission.
 </p>
 
         <div class="btn-container">
@@ -134,12 +121,18 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+             
+  During my M.A.Sc (applied research) studies, I spent time at the University of Waterloo 
+  (with <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/profile/wmelek" target="_blank">Dr. William Melek</a> 
+  and <a href="https://uwaterloo.ca/electrical-computer-engineering/profile/gshaker" target="_blank">Dr. George Shaker</a>),  
+  APPLE Inc., UW Robohub, Keysight Technologies Inc., and Rogers Communications Canada Inc., 
+  where I worked on connected robotics technology.
+</p>
+
+  Earlier in my life, I developed a passion for swarm robotics, which led to winning 3rd place  
+  in Best Engineering Science Final Year Project during my B.Sc. Later, I was selected to supervise  
+  a NUST University Islamabad team for the Aerotech IMECHE United Kingdom 2022 competition,  
+  developing a hexacopter for a locust-swarm autonomy mission.
             </p>
           </div>
         </div>
