--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <!-- ===================== PROJECT 1 ===================== -->
     <div class="project-box">
       <div class="project-left">
-        <img src="./assets/project1.jpg"
+        <img src="./assets/project1.png"
              class="project-thumb"
              alt="CRADMap multi-robot SLAM with 4D radar and 5G">
       </div>
@@ -276,8 +276,8 @@
         </p>
 
         <p class="project-desc">
-          Developed a full-scale distributed SLAM pipeline integrating ORB-SLAM3, TSDF–Octree fusion,
-          4D mmWave radar perception, and 5G offloading for real-time multi-robot mapping under occlusions
+          Developed a full-scale distributed volumetric SLAM pipeline with software development with ORB-SLAM3 (front-end), TSDF–Octree fusion (middle-end),
+          4D mmWave radar + RGB-D perception, and 5G offloading for real-time multi-robot mapping under occlusions
           and degraded visual conditions.
         </p>
 
@@ -297,7 +297,7 @@
     <!-- ===================== PROJECT 2 ===================== -->
     <div class="project-box">
       <div class="project-left">
-        <img src="./assets/project2.jpg"
+        <img src="./assets/project2.png"
              class="project-thumb"
              alt="RAPTAR radar radiation pattern measurement system">
       </div>
@@ -357,7 +357,7 @@
     <!-- ===================== PROJECT 4 ===================== -->
     <div class="project-box">
       <div class="project-left">
-        <img src="./assets/project4.jpg"
+        <img src="./assets/project4.png"
              class="project-thumb"
              alt="Swarm Autobots multi-robot coordination">
       </div>
