--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           <button class="btn btn-color-2 project-btn"
             onclick="location.href='https://github.com/Maaz-qureshi98/CRADMap-Beyond-the-Visible'">GitHub</button>
           <button class="btn btn-color-2 project-btn"
-            onclick="location.href='https://arxiv.org/pdf/2503.00262'">Preprint</button>
+            onclick="location.href='https://arxiv.org/pdf/2503.00262'"> IEEE ICARM 2025 Publication</button>
         </div>
       </div>
     </div>
@@ -318,7 +318,7 @@
           <button class="btn btn-color-2 project-btn"
             onclick="location.href='https://github.com/Maaz-qureshi98/RAPTAR-Motion-Planning'">GitHub</button>
           <button class="btn btn-color-2 project-btn"
-            onclick="location.href='https://arxiv.org/pdf/2507.16988'">Preprint</button>
+            onclick="location.href='https://arxiv.org/pdf/2507.16988'">IEEE Transactions on Antennas and Propagation (TAP)</button>
         </div>
       </div>
     </div>
@@ -328,7 +328,7 @@
     <!-- ===================== PROJECT 3 ===================== -->
     <div class="project-box">
       <div class="project-left">
-        <img src="./assets/project3.jpg"
+        <img src="./assets/project3.png"
              class="project-thumb"
              alt="Humanoid robot non-verbal gesture learning">
       </div>
