--- a/index.html
+++ b/index.html
@@ -52,31 +52,38 @@
       <!-- COMPANY LOGO STRIP (as requested) -->
       <div class="logo-strip">
         <div class="logo-chip">
+          <a class="logo-chip" href="https://www.cobionix.com/en/" target="_blank" rel="noopener"></a>
           <img src="./assets/cobionix.png" alt="Cobionix" />
           <span>2025–Present</span>
         </div>
         <div class="logo-chip">
+          <a class="logo-chip" href="https://www.apple.com/" target="_blank" rel="noopener"></a>
           <img src="./assets/apple.png" alt="Apple" />
           <span>2024–2025</span>
         </div>
         <div class="logo-chip">
+          <a class="logo-chip" href="https://www.keysight.com/us/en/home.html" target="_blank" rel="noopener"></a>
           <img src="./assets/keysight.png" alt="Keysight" />
           <span>2024</span>
         </div>
         <div class="logo-chip">
+          <a class="logo-chip" href="https://www.rogers.com/" target="_blank" rel="noopener"></a>
           <img src="./assets/rogers.png" alt="Rogers" />
           <span>2024–2025</span>
         </div>
         <div class="logo-chip">
+          <a class="logo-chip" href="https://uwaterloo.ca/" target="_blank" rel="noopener"></a>
           <img src="./assets/uwaterloo.jpeg" alt="University of Waterloo" />
           <span>MASc</span>
         </div>
         <div class="logo-chip">
+          <a class="logo-chip" href="https://abysssolutions.co/" target="_blank" rel="noopener"></a>
           <img src="./assets/abyss.png" alt="Abyss" />
           <span>2022–2023</span>
         </div>
       </div>
 
+div class="logo-strip">
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./assets/Resume_Maaz.pdf')">
           Download CV
@@ -198,7 +205,7 @@
     <div class="exp-wrapper">
 
       <div class="exp-box">
-        <div class="exp-left">
+        <div class="exp-left">  <a class="logo-chip" href="https://www.cobionix.com/en/" target="_blank" rel="noopener">
           <img src="./assets/cobionix.png" class="exp-logo" alt="Cobionix Logo" />
           <p class="exp-date">Sept 2025 – Present</p>
           <p class="exp-location">Kitchener, Canada</p>
@@ -218,6 +225,7 @@
 
       <div class="exp-box">
         <div class="exp-left">
+            <a class="logo-chip" href="https://www.apple.com/" target="_blank" rel="noopener">
           <img src="./assets/apple.png" class="exp-logo" alt="Apple Logo" />
           <p class="exp-date">Jan 2024 – July 2025</p>
           <p class="exp-location">Waterloo, Canada</p>
@@ -237,6 +245,7 @@
 
       <div class="exp-box">
         <div class="exp-left">
+            <a class="logo-chip" href="https://uwaterloo.ca/robohub/" target="_blank" rel="noopener">
           <img src="./assets/uwaterloo.jpeg" class="exp-logo" alt="UWaterloo Logo" />
           <p class="exp-date">Jan 2024 – Sept 2025</p>
           <p class="exp-location">Waterloo, Canada</p>
@@ -256,6 +265,7 @@
 
       <div class="exp-box">
         <div class="exp-left">
+            <a class="logo-chip" href="https://www.keysight.com/us/en/home.html" target="_blank" rel="noopener">
           <img src="./assets/keysight.png" class="exp-logo" alt="Keysight Logo" />
           <p class="exp-date">Sept 2024 – Dec 2024</p>
           <p class="exp-location">Waterloo, Canada</p>
@@ -275,6 +285,7 @@
 
       <div class="exp-box">
         <div class="exp-left">
+            <a class="logo-chip" href="https://www.rogers.com/" target="_blank" rel="noopener">
           <img src="./assets/rogers.png" class="exp-logo" alt="Rogers Logo" />
           <p class="exp-date">Jan 2024 – Aug 2025</p>
           <p class="exp-location">Waterloo, Canada</p>
@@ -294,6 +305,7 @@
 
       <div class="exp-box">
         <div class="exp-left">
+            <a class="logo-chip" href="https://abysssolutions.co/" target="_blank" rel="noopener">
           <img src="./assets/abyss.png" class="exp-logo" alt="Abyss Logo" />
           <p class="exp-date">May 2022 – Dec 2023</p>
           <p class="exp-location">Islamabad + Australia</p>
