--- a/index.html
+++ b/index.html
@@ -49,38 +49,46 @@
       <h1 class="title">Maaz Qureshi</h1>
       <p class="section__text__p2">AI/ML & Robotics Research Engineer</p>
 
-      <!-- COMPANY LOGO STRIP (as requested) -->
+      <!-- ===================== CLICKABLE LOGO STRIP ===================== -->
+      <!-- FIXED: Each item is a single <a> (not a div + empty a). -->
       <div class="logo-strip">
-        <div class="logo-chip">
-          <a class="logo-chip" href="https://www.cobionix.com/en/" target="_blank" rel="noopener"></a>
+
+        <a class="logo-chip" href="https://www.cobionix.com/en/" target="_blank" rel="noopener">
           <img src="./assets/cobionix.png" alt="Cobionix" />
           <span>2025–Present</span>
-        </div>
-        <div class="logo-chip">
-          <a class="logo-chip" href="https://www.apple.com/" target="_blank" rel="noopener"></a>
+        </a>
+
+        <a class="logo-chip" href="https://www.apple.com/" target="_blank" rel="noopener">
           <img src="./assets/apple.png" alt="Apple" />
           <span>2024–2025</span>
-        </div>
-        <div class="logo-chip">
-          <a class="logo-chip" href="https://www.keysight.com/us/en/home.html" target="_blank" rel="noopener"></a>
+        </a>
+
+        <a class="logo-chip" href="https://www.keysight.com/us/en/home.html" target="_blank" rel="noopener">
           <img src="./assets/keysight.png" alt="Keysight" />
           <span>2024</span>
-        </div>
-        <div class="logo-chip">
-          <a class="logo-chip" href="https://www.rogers.com/" target="_blank" rel="noopener"></a>
+        </a>
+
+        <a class="logo-chip" href="https://www.rogers.com/" target="_blank" rel="noopener">
           <img src="./assets/rogers.png" alt="Rogers" />
           <span>2024–2025</span>
-        </div>
-        <div class="logo-chip">
-          <a class="logo-chip" href="https://uwaterloo.ca/" target="_blank" rel="noopener"></a>
+        </a>
+
+        <a class="logo-chip" href="https://uwaterloo.ca/" target="_blank" rel="noopener">
           <img src="./assets/uwaterloo.jpeg" alt="University of Waterloo" />
           <span>MASc</span>
-        </div>
-        <div class="logo-chip">
-          <a class="logo-chip" href="https://abysssolutions.co/" target="_blank" rel="noopener"></a>
-          <img src="./assets/abyss.png" alt="Abyss" />
+        </a>
+
+        <a class="logo-chip" href="https://abysssolutions.co/" target="_blank" rel="noopener">
+          <img src="./assets/abyss.png" alt="Abyss Solutions" />
           <span>2022–2023</span>
-        </div>
+        </a>
+
+        <!-- ✅ ADDED: Bahria University BSc after Abyss -->
+        <a class="logo-chip" href="https://bahria.edu.pk/" target="_blank" rel="noopener">
+          <img src="./assets/bahria_university.jpeg" alt="Bahria University" />
+          <span>BSc (2017–2021)</span>
+        </a>
+
       </div>
 
       <div class="btn-container">
@@ -94,14 +102,14 @@
 
       <div id="socials-container">
         <img src="./assets/linkedin.png" class="icon"
-          alt="LinkedIn"
-          onclick="location.href='https://www.linkedin.com/in/maaz-ahmad-046c/'" />
+             alt="LinkedIn"
+             onclick="location.href='https://www.linkedin.com/in/maaz-ahmad-046c/'" />
         <img src="./assets/github.png" class="icon"
-          alt="GitHub"
-          onclick="location.href='https://github.com/Maaz-qureshi98'" />
+             alt="GitHub"
+             onclick="location.href='https://github.com/Maaz-qureshi98'" />
         <img src="./assets/google-scholar.png" class="icon"
-          alt="Google Scholar"
-          onclick="location.href='https://scholar.google.ca/citations?user=hC7tswoAAAAJ&hl=en'" />
+             alt="Google Scholar"
+             onclick="location.href='https://scholar.google.ca/citations?user=hC7tswoAAAAJ&hl=en'" />
       </div>
     </div>
   </section>
@@ -113,7 +121,7 @@
     <p class="section__text__p1">Get To Know More</p>
     <h1 class="title">About Me</h1>
 
-    <!-- Text LEFT, Image RIGHT (as requested) -->
+    <!-- Text LEFT, Image RIGHT -->
     <div class="about-layout">
       <div class="about-text">
         <p>
@@ -131,9 +139,9 @@
 
         <p>
           During my M.A.Sc. studies, I worked at the University of Waterloo with
-          <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/profile/wmelek" target="_blank">Dr. William Melek</a>
+          <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/profile/wmelek" target="_blank" rel="noopener">Dr. William Melek</a>
           and
-          <a href="https://uwaterloo.ca/electrical-computer-engineering/profile/gshaker" target="_blank">Dr. George Shaker</a>,
+          <a href="https://uwaterloo.ca/electrical-computer-engineering/profile/gshaker" target="_blank" rel="noopener">Dr. George Shaker</a>,
           and collaborated with Apple, UW RoboHub, Keysight, and Rogers on connected robotics systems.
         </p>
       </div>
@@ -162,9 +170,9 @@
           <p class="edu-duration">Jan 2024 – Aug 2025</p>
 
           <div class="edu-btn-row">
-            <a href="https://uwspace.uwaterloo.ca/items/17af2309-7924-47ad-802d-10f313d2a378" target="_blank" class="mini-btn">Thesis</a>
-            <a href="https://www.youtube.com/watch?v=eTLxCY2rRMA" target="_blank" class="mini-btn">Video 1</a>
-            <a href="https://www.youtube.com/watch?v=fgeb6k_P9mg" target="_blank" class="mini-btn">Video 2</a>
+            <a href="https://uwspace.uwaterloo.ca/items/17af2309-7924-47ad-802d-10f313d2a378" target="_blank" rel="noopener" class="mini-btn">Thesis</a>
+            <a href="https://www.youtube.com/watch?v=eTLxCY2rRMA" target="_blank" rel="noopener" class="mini-btn">Video 1</a>
+            <a href="https://www.youtube.com/watch?v=fgeb6k_P9mg" target="_blank" rel="noopener" class="mini-btn">Video 2</a>
           </div>
         </div>
       </div>
@@ -185,8 +193,8 @@
           <p class="edu-duration">Sept 2017 – Aug 2021</p>
 
           <div class="edu-btn-row">
-            <a href="BSC_THESIS_LINK_HERE" target="_blank" class="mini-btn">Thesis</a>
-            <a href="https://www.youtube.com/watch?v=2UYPGOTPboM&feature=youtu.be" target="_blank" class="mini-btn">Video</a>
+            <a href="BSC_THESIS_LINK_HERE" target="_blank" rel="noopener" class="mini-btn">Thesis</a>
+            <a href="https://www.youtube.com/watch?v=2UYPGOTPboM&feature=youtu.be" target="_blank" rel="noopener" class="mini-btn">Video</a>
           </div>
         </div>
       </div>
@@ -203,9 +211,12 @@
 
     <div class="exp-wrapper">
 
+      <!-- COBIONIX -->
       <div class="exp-box">
-        <div class="exp-left">  <a class="logo-chip" href="https://www.cobionix.com/en/" target="_blank" rel="noopener">
-          <img src="./assets/cobionix.png" class="exp-logo" alt="Cobionix Logo" />
+        <div class="exp-left">
+          <a href="https://www.cobionix.com/en/" target="_blank" rel="noopener">
+            <img src="./assets/cobionix.png" class="exp-logo" alt="Cobionix Logo" />
+          </a>
           <p class="exp-date">Sept 2025 – Present</p>
           <p class="exp-location">Kitchener, Canada</p>
         </div>
@@ -222,10 +233,12 @@
 
       <hr />
 
+      <!-- APPLE -->
       <div class="exp-box">
         <div class="exp-left">
-            <a class="logo-chip" href="https://www.apple.com/" target="_blank" rel="noopener">
-          <img src="./assets/apple.png" class="exp-logo" alt="Apple Logo" />
+          <a href="https://www.apple.com/" target="_blank" rel="noopener">
+            <img src="./assets/apple.png" class="exp-logo" alt="Apple Logo" />
+          </a>
           <p class="exp-date">Jan 2024 – July 2025</p>
           <p class="exp-location">Waterloo, Canada</p>
         </div>
@@ -242,10 +255,12 @@
 
       <hr />
 
+      <!-- UW ROBOHUB -->
       <div class="exp-box">
         <div class="exp-left">
-            <a class="logo-chip" href="https://uwaterloo.ca/robohub/" target="_blank" rel="noopener">
-          <img src="./assets/uwaterloo.jpeg" class="exp-logo" alt="UWaterloo Logo" />
+          <a href="https://uwaterloo.ca/robohub/" target="_blank" rel="noopener">
+            <img src="./assets/uwaterloo.jpeg" class="exp-logo" alt="UWaterloo Logo" />
+          </a>
           <p class="exp-date">Jan 2024 – Sept 2025</p>
           <p class="exp-location">Waterloo, Canada</p>
         </div>
@@ -262,10 +277,12 @@
 
       <hr />
 
+      <!-- KEYSIGHT -->
       <div class="exp-box">
         <div class="exp-left">
-            <a class="logo-chip" href="https://www.keysight.com/us/en/home.html" target="_blank" rel="noopener">
-          <img src="./assets/keysight.png" class="exp-logo" alt="Keysight Logo" />
+          <a href="https://www.keysight.com/us/en/home.html" target="_blank" rel="noopener">
+            <img src="./assets/keysight.png" class="exp-logo" alt="Keysight Logo" />
+          </a>
           <p class="exp-date">Sept 2024 – Dec 2024</p>
           <p class="exp-location">Waterloo, Canada</p>
         </div>
@@ -282,10 +299,12 @@
 
       <hr />
 
+      <!-- ROGERS -->
       <div class="exp-box">
         <div class="exp-left">
-            <a class="logo-chip" href="https://www.rogers.com/" target="_blank" rel="noopener">
-          <img src="./assets/rogers.png" class="exp-logo" alt="Rogers Logo" />
+          <a href="https://www.rogers.com/" target="_blank" rel="noopener">
+            <img src="./assets/rogers.png" class="exp-logo" alt="Rogers Logo" />
+          </a>
           <p class="exp-date">Jan 2024 – Aug 2025</p>
           <p class="exp-location">Waterloo, Canada</p>
         </div>
@@ -302,10 +321,12 @@
 
       <hr />
 
+      <!-- ABYSS -->
       <div class="exp-box">
         <div class="exp-left">
-            <a class="logo-chip" href="https://abysssolutions.co/" target="_blank" rel="noopener">
-          <img src="./assets/abyss.png" class="exp-logo" alt="Abyss Logo" />
+          <a href="https://abysssolutions.co/" target="_blank" rel="noopener">
+            <img src="./assets/abyss.png" class="exp-logo" alt="Abyss Logo" />
+          </a>
           <p class="exp-date">May 2022 – Dec 2023</p>
           <p class="exp-location">Islamabad + Australia</p>
         </div>
@@ -330,9 +351,8 @@
     <p class="section__text__p1">Browse My</p>
     <h1 class="title">Research</h1>
 
-    <!-- Google Scholar shortcut (start of section) -->
     <div class="scholar-badge">
-      <a href="https://scholar.google.ca/citations?user=hC7tswoAAAAJ&hl=en" target="_blank">
+      <a href="https://scholar.google.ca/citations?user=hC7tswoAAAAJ&hl=en" target="_blank" rel="noopener">
         <img src="./assets/google-scholar.png" class="icon" alt="Google Scholar Profile" />
       </a>
       <p>Google Scholar Profile</p>
@@ -350,9 +370,9 @@
             and degraded visibility.
           </p>
           <div class="project-btn-row">
-            <a class="mini-btn" href="https://www.youtube.com/watch?v=eTLxCY2rRMA" target="_blank">Video</a>
-            <a class="mini-btn" href="https://github.com/Maaz-qureshi98/CRADMap-Beyond-the-Visible" target="_blank">GitHub</a>
-            <a class="mini-btn" href="https://arxiv.org/pdf/2503.00262" target="_blank">Publication</a>
+            <a class="mini-btn" href="https://www.youtube.com/watch?v=eTLxCY2rRMA" target="_blank" rel="noopener">Video</a>
+            <a class="mini-btn" href="https://github.com/Maaz-qureshi98/CRADMap-Beyond-the-Visible" target="_blank" rel="noopener">GitHub</a>
+            <a class="mini-btn" href="https://arxiv.org/pdf/2503.00262" target="_blank" rel="noopener">Publication</a>
           </div>
         </div>
         <div class="research-media">
@@ -371,9 +391,9 @@
             for high-precision mmWave antenna radiation pattern measurement in 3D space.
           </p>
           <div class="project-btn-row">
-            <a class="mini-btn" href="https://www.youtube.com/watch?v=fgeb6k_P9mg" target="_blank">Video</a>
-            <a class="mini-btn" href="https://github.com/Maaz-qureshi98/RAPTAR-Motion-Planning" target="_blank">GitHub</a>
-            <a class="mini-btn" href="https://arxiv.org/pdf/2507.16988" target="_blank">Preprint</a>
+            <a class="mini-btn" href="https://www.youtube.com/watch?v=fgeb6k_P9mg" target="_blank" rel="noopener">Video</a>
+            <a class="mini-btn" href="https://github.com/Maaz-qureshi98/RAPTAR-Motion-Planning" target="_blank" rel="noopener">GitHub</a>
+            <a class="mini-btn" href="https://arxiv.org/pdf/2507.16988" target="_blank" rel="noopener">Preprint</a>
           </div>
         </div>
         <div class="research-media">
@@ -392,7 +412,7 @@
             enabling non-verbal HRI via IMU-based motion interpretation.
           </p>
           <div class="project-btn-row">
-            <a class="mini-btn" href="https://drive.google.com/file/d/1IvIz7Xvnk-jjGcVKldO5CLgQ5YhUBckr/view" target="_blank">Preprint</a>
+            <a class="mini-btn" href="https://drive.google.com/file/d/1IvIz7Xvnk-jjGcVKldO5CLgQ5YhUBckr/view" target="_blank" rel="noopener">Preprint</a>
           </div>
         </div>
         <div class="research-media">
@@ -411,7 +431,7 @@
             wireless peer-to-peer communication, and real-time trajectory execution.
           </p>
           <div class="project-btn-row">
-            <a class="mini-btn" href="https://www.youtube.com/watch?v=2UYPGOTPboM" target="_blank">Video</a>
+            <a class="mini-btn" href="https://www.youtube.com/watch?v=2UYPGOTPboM" target="_blank" rel="noopener">Video</a>
           </div>
         </div>
         <div class="research-media">
@@ -430,7 +450,7 @@
             over 18 km tethered operation — the largest inspection of its kind in South Asia.
           </p>
           <div class="project-btn-row">
-            <a class="mini-btn" href="https://drive.google.com/drive/folders/18bYmCwY1LIwICQbEdHR-Cqnino6fR8KQ" target="_blank">Documents</a>
+            <a class="mini-btn" href="https://drive.google.com/drive/folders/18bYmCwY1LIwICQbEdHR-Cqnino6fR8KQ" target="_blank" rel="noopener">Documents</a>
           </div>
         </div>
         <div class="research-media">
@@ -449,7 +469,7 @@
             and 2.3 m/s water velocity.
           </p>
           <div class="project-btn-row">
-            <a class="mini-btn" href="https://drive.google.com/drive/folders/1DCBUf8P2L1ouxMgX6NgQNlcq-DcO5vRq" target="_blank">Documents</a>
+            <a class="mini-btn" href="https://drive.google.com/drive/folders/1DCBUf8P2L1ouxMgX6NgQNlcq-DcO5vRq" target="_blank" rel="noopener">Documents</a>
           </div>
         </div>
         <div class="research-media">
@@ -468,7 +488,7 @@
             for safe patient-care workflows during COVID-19.
           </p>
           <div class="project-btn-row">
-            <a class="mini-btn" href="https://drive.google.com/drive/folders/1-T06cVyxKgZP9MekK_Ysm3ULUgkmd1S9" target="_blank">Video</a>
+            <a class="mini-btn" href="https://drive.google.com/drive/folders/1-T06cVyxKgZP9MekK_Ysm3ULUgkmd1S9" target="_blank" rel="noopener">Video</a>
           </div>
         </div>
         <div class="research-media">
@@ -494,7 +514,7 @@
 
       <div class="contact-info-container">
         <img src="./assets/linkedin.png" class="icon contact-icon" alt="LinkedIn" />
-        <p><a href="https://www.linkedin.com/in/maaz-ahmad-046c/" target="_blank">LinkedIn</a></p>
+        <p><a href="https://www.linkedin.com/in/maaz-ahmad-046c/" target="_blank" rel="noopener">LinkedIn</a></p>
       </div>
     </div>
   </section>
